--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 
 @import url(style/header.css);
+@import url(style/home.css);
+@import url(style/produtos.css);
 
 :root {
     --fontetitulo: Noto Serif;
@@ -9,6 +11,7 @@
     --marromfundo1: #F2B999;
     --marromfundo2: #D99066;
     --marromsombra: #1C0D0A;
+    --marromsombra2: rgba(64,31,24,0.28);
     --marrombotao: #a66249;
     --marrombotaoativo: #D99066;
     --marrommenu: #D99066;
