--- a/style/header.css
+++ b/style/header.css
@@ -7,10 +7,13 @@ header {
 }
 
 .cabecalho {
-    display: flex; z-index: 1;  
+    display: flex; z-index: 2;  
     align-items: center; justify-content: center;
     width: 80%; height: 48px;
     background: var(--marrom2);
+    border-bottom: 3px solid var(--marromsombra2);
+    border-left: 3px solid var(--marromsombra2);
+    border-right: 3px solid var(--marromsombra2);
     border-radius: 0 0 20px 20px;
     padding: 0 10px;
     
@@ -25,32 +28,36 @@ header {
 
 .iconburger {
     font-size: 20px;
-    color: var(--marrombotao);
+    color: var(--marrombotao); transition: 0.1s;
     text-shadow: 1px 1px 2px var(--marromsombra);
+}
+
+.fa-xmark {
+    font-size: 26px;
 }
 
 .iconlogo {
-    font-size: 20px;
+    font-size: 20px; cursor: grabbing;
     color: var(--marrombotao);
     text-shadow: 1px 1px 2px var(--marromsombra);
 }
 
-.c_botaomenu {
-    background-color: transparent;
-    border: transparent;
-}
-
 .cabecalho-menu {
-    display: flex;
+    display: flex; z-index: 1; width: 50%;
+    position: absolute; left: 25%;
     align-items: center; justify-content: center;
 }
 .menu {
-    display: flex; position: relative; top: -100px;
+    display: flex; position: relative; top: -150px;
     flex-direction: column; justify-content: center;
-    width: 200px; height: 100px;
+    width: 100%; height: 125px;
     background: var(--marrommenu);
     border-radius: 0 0 10px 10px;
     transition: 1s;
+}
+
+.iconmenu {
+    margin-right: 5px;
 }
 
 .menu-ativo {
@@ -63,18 +70,12 @@ header {
     font-family: var(--fontegeral); font-style: normal;
     font-size: 16px; font-weight: 600; line-height: 19px;
     text-transform: uppercase; text-decoration: none;
-    margin: 10px 30px;
+    margin: 10px 20px;
     color: var(--marrom2);
     background: var(--marrom2);
-    -webkit-background-clip: text;
+    -webkit-background-clip: text; background-clip: text;
     -webkit-text-fill-color: transparent;
     transition: 0.5s;
-
-}
-
-.iconmenu {
-    margin-right: 5px ;
-    width: 18px; height: 17px;
 }
 
 .menulink:hover {
@@ -85,3 +86,10 @@ header {
     font-size: 17px;
 }
 
+.c_botaomenu {
+    background: transparent; border: transparent;
+    cursor: grab; transition: 1s;
+}
+ .c_botaomenu:active {
+    cursor: grabbing;
+ }
