--- a/style/header.css
+++ b/style/header.css
@@ -1,9 +1,11 @@
 header {
-    height: auto;
+    height: auto; 
 }
 .cabecalho-geral {
-    display: flex;
-    align-items: center; justify-content: center;
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+
 }
 
 .cabecalho {
@@ -16,6 +18,8 @@ header {
     border-right: 3px solid var(--marromsombra2);
     border-radius: 0 0 20px 20px;
     padding: 0 10px;
+    position: fixed; 
+    top: 0;
     
 }
 
@@ -48,9 +52,9 @@ header {
     align-items: center; justify-content: center;
 }
 .menu {
-    display: flex; position: relative; top: -150px;
+    display: flex; position: relative; top: -100px;
     flex-direction: column; justify-content: center;
-    width: 100%; height: 125px;
+    width: 50%; height: 125px; position: fixed;
     background: var(--marrommenu);
     border-radius: 0 0 10px 10px;
     transition: 1s;
@@ -61,8 +65,9 @@ header {
 }
 
 .menu-ativo {
-    display: flex;
-    top: 0; transition: 1s;
+    display: flex; margin-top: 48px;
+    position: fixed; top: 0px;
+    transition: 1s; width: 50%;
 }
 
 .menulink {
