--- a/style/produtos.css
+++ b/style/produtos.css
@@ -1,7 +1,7 @@
 
 .produtos {
-    position: relative; top: 400px;
+    position: absolute; top: 300px;
     background: var(--marromfundo2);
     width: 100%; height: 400px;
-    border-radius: 0 0 0 80px;
+    border-radius: 0 40px 0 40px;
 }
